# benchmark_pipelines

./: CMakeLists.txt  package.xml  readme.md
config/: DOF3_cubes.yaml  DOF6cubes20210825.yaml  config.yaml  config_sharework.yaml  plot.yaml  query01_3dof.yaml  result_query01.yaml  result_query01_3dof.yaml  sharework_queries.yaml
config/old/: DOF3cubes.yaml  DOF6BENCHMARK1_compare_mixed.yaml  DOF6new_conf.yaml  DOF9cubes.yaml  query01.yaml
launch/: analyze_results.launch  execute.launch  execute_benchmark.launch  execute_multigoal_benchmark.launch  execute_sharework.launch  plot_results.launch
scripts/: DOF3new_conf.yaml  DOF9.md  analyze_benchmark.py  analyze_test.py  barriera.yaml  benchmark_result_12.yaml  benchmark_result_9.yaml  benchmark_result_9b.yaml  create_objects_from_image.py  execute_benchmark.py  execute_multigoal_benchmark.py  result_boxplot.py  sharework.yaml  sharework_queries.yaml  view_results.py
scripts/old/: merge_results.py
src/: generate_queries.cpp  run_queries.cpp
